Fixing button alignment

--- a/css/qbootstrap.css
+++ b/css/qbootstrap.css
@@ -1,21 +1,1 @@
-.qform-horizontal .row .form-group {
-  vertical-align: middle;
-  padding-left: 0;
-  padding-right: 0;
-}
-.qform-horizontal .row .form-control {
-  display: inline-block;
-  vertical-align: middle;
-}
-.qform-horizontal .row .control-label {
-  text-align: right;
-  margin-bottom: 0;
-  padding-top: 7px;
-}
-.qform-horizontal .row .checkbox {
-  margin-top: 7px;
-}
-.modal-header {
-  border-top-left-radius: 6px;
-  border-top-right-radius: 6px;
-}
+.qform-horizontal .row .form-group{vertical-align:middle;padding-left:0;padding-right:0}.qform-horizontal .row .form-control{display:inline-block;vertical-align:middle}.qform-horizontal .row .control-label{text-align:right;margin-bottom:0;padding-top:7px}.qform-horizontal .row .checkbox{margin-top:7px}.qform-horizontal .row .row .form-group .btn-group{display:inline-block}.row .form-group .btn-group{display:block}.row .form-group .btn-group .btn{float:none;display:inline-block;margin-right:0}.row .form-group .btn-group .btn+.btn{margin-left:-5px}.modal-header{border-top-left-radius:6px;border-top-right-radius:6px}
